// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toast rendered output — structural + snapshot tests empty state (no toasts) ToastSkeleton standalone matches its structural snapshot 1`] = `
<div
  aria-hidden="true"
  class="pointer-events-none overflow-hidden rounded-2xl border border-[var(--border)] bg-[var(--surface)] shadow-lg animate-pulse"
>
  <div
    class="h-1.5 w-full bg-slate-200"
  />
  <div
    class="flex items-start gap-3 p-4"
  >
    <div
      class="h-6 w-16 rounded-full bg-slate-200"
    />
    <div
      class="min-w-0 flex-1"
    >
      <div
        class="h-4 w-3/4 rounded bg-slate-200"
      />
      <div
        class="mt-2 h-4 w-full rounded bg-slate-200"
      />
      <div
        class="mt-3 h-7 w-16 rounded-md bg-slate-200"
      />
    </div>
    <div
      class="h-8 w-8 rounded-full bg-slate-200"
    />
  </div>
</div>
`;

exports[`toast rendered output — structural + snapshot tests empty state (no toasts) matches the snapshot for the empty viewport with skeleton 1`] = `
<div
  aria-atomic="false"
  aria-busy="true"
  aria-label="Notifications"
  class="pointer-events-none fixed right-4 top-4 z-50 flex w-[min(24rem,calc(100vw-2rem))] flex-col gap-3"
  role="region"
>
  <div
    aria-hidden="true"
    class="pointer-events-none overflow-hidden rounded-2xl border border-[var(--border)] bg-[var(--surface)] shadow-lg animate-pulse"
  >
    <div
      class="h-1.5 w-full bg-slate-200"
    />
    <div
      class="flex items-start gap-3 p-4"
    >
      <div
        class="h-6 w-16 rounded-full bg-slate-200"
      />
      <div
        class="min-w-0 flex-1"
      >
        <div
          class="h-4 w-3/4 rounded bg-slate-200"
        />
        <div
          class="mt-2 h-4 w-full rounded bg-slate-200"
        />
        <div
          class="mt-3 h-7 w-16 rounded-md bg-slate-200"
        />
      </div>
      <div
        class="h-8 w-8 rounded-full bg-slate-200"
      />
    </div>
  </div>
</div>
`;

exports[`toast rendered output — structural + snapshot tests empty state (no toasts) matches the snapshot for the empty viewport with skeleton 2`] = `<div />`;

exports[`toast rendered output — structural + snapshot tests error boundary fallback state matches the structural snapshot for the error boundary fallback 1`] = `
<div
  aria-label="Notifications Fallback"
  class="pointer-events-none fixed right-4 top-4 z-50 flex w-[min(24rem,calc(100vw-2rem))] flex-col gap-3"
  role="region"
>
  <div
    class="pointer-events-auto overflow-hidden rounded-2xl border border-[var(--border)] bg-[var(--surface)] text-[var(--foreground)] shadow-sm shadow-lg"
    role="alert"
  >
    <div
      class="h-1.5 w-full bg-rose-500"
    />
    <div
      class="flex flex-col gap-2 p-4"
    >
      <p
        class="text-sm font-semibold"
      >
        Notifications failed to load
      </p>
      <button
        class="self-start rounded-md px-3 py-1 text-xs font-semibold transition focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)] focus-visible:ring-offset-1 bg-[var(--primary)] text-[var(--primary-foreground)] hover:opacity-90"
        type="button"
      >
        Retry
      </button>
    </div>
  </div>
</div>
`;

exports[`toast rendered output — structural + snapshot tests error boundary fallback state matches the structural snapshot for the error boundary fallback 2`] = `
<div
  aria-label="Notifications Fallback"
  class="pointer-events-none fixed right-4 top-4 z-50 flex w-[min(24rem,calc(100vw-2rem))] flex-col gap-3"
  role="region"
>
  <div
    class="pointer-events-auto overflow-hidden rounded-2xl border border-[var(--border)] bg-[var(--surface)] text-[var(--foreground)] shadow-sm shadow-lg"
    role="alert"
  >
    <div
      class="h-1.5 w-full bg-rose-500"
    />
    <div
      class="flex flex-col gap-2 p-4"
    >
      <p
        class="text-sm font-semibold"
      >
        Notifications failed to load
      </p>
      <button
        class="self-start rounded-md px-3 py-1 text-xs font-semibold transition focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)] focus-visible:ring-offset-1 bg-[var(--primary)] text-[var(--primary-foreground)] hover:opacity-90"
        type="button"
      >
        Retry
      </button>
    </div>
  </div>
</div>
`;

exports[`toast rendered output — structural + snapshot tests error boundary fallback state recovers structurally after retry button is clicked 1`] = `
<div
  role="status"
>
  Recovered
</div>
`;

exports[`toast rendered output — structural + snapshot tests live-region announcer structure matches the structural snapshot for live regions after status update delay 1`] = `
<div>
  <button
    data-testid="btn-success"
    type="button"
  >
    S
  </button>
  <button
    data-testid="btn-error"
    type="button"
  >
    E
  </button>
</div>
`;

exports[`toast rendered output — structural + snapshot tests loaded state — multiple toasts matches the structural snapshot for multiple toasts stacked 1`] = `
<div
  aria-atomic="false"
  aria-label="Notifications"
  class="pointer-events-none fixed right-4 top-4 z-50 flex w-[min(24rem,calc(100vw-2rem))] flex-col gap-3"
  role="region"
>
  <div
    class="pointer-events-auto overflow-hidden rounded-2xl border border-[var(--border)] bg-[var(--surface)] text-[var(--foreground)] shadow-sm shadow-lg focus:outline-none"
    role="status"
    tabindex="0"
  >
    <div
      class="h-1.5 w-full bg-emerald-500"
    />
    <div
      class="flex items-start gap-3 p-4"
    >
      <div
        class="rounded-full px-2.5 py-1 text-xs font-semibold uppercase tracking-[0.18em] bg-[var(--status-success-bg)] text-[var(--status-success-foreground)]"
      >
        Success
      </div>
      <div
        class="min-w-0 flex-1"
      >
        <p
          class="text-sm font-semibold"
        >
          Success A
        </p>
        <p
          class="mt-1 text-sm text-[var(--muted-foreground)]"
        >
          First success
        </p>
      </div>
      <button
        aria-label="Dismiss success notification"
        class="rounded-full p-1.5 text-[var(--muted-foreground)] transition hover:bg-[var(--accent)] hover:text-[var(--foreground)] focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)] focus-visible:ring-offset-1"
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
      </button>
    </div>
  </div>
  <div
    class="pointer-events-auto overflow-hidden rounded-2xl border border-[var(--border)] bg-[var(--surface)] text-[var(--foreground)] shadow-sm shadow-lg focus:outline-none"
    role="status"
    tabindex="0"
  >
    <div
      class="h-1.5 w-full bg-emerald-500"
    />
    <div
      class="flex items-start gap-3 p-4"
    >
      <div
        class="rounded-full px-2.5 py-1 text-xs font-semibold uppercase tracking-[0.18em] bg-[var(--status-success-bg)] text-[var(--status-success-foreground)]"
      >
        Success
      </div>
      <div
        class="min-w-0 flex-1"
      >
        <p
          class="text-sm font-semibold"
        >
          Success B
        </p>
        <p
          class="mt-1 text-sm text-[var(--muted-foreground)]"
        >
          Second success
        </p>
      </div>
      <button
        aria-label="Dismiss success notification"
        class="rounded-full p-1.5 text-[var(--muted-foreground)] transition hover:bg-[var(--accent)] hover:text-[var(--foreground)] focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)] focus-visible:ring-offset-1"
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
      </button>
    </div>
  </div>
  <div
    class="pointer-events-auto overflow-hidden rounded-2xl border border-[var(--border)] bg-[var(--surface)] text-[var(--foreground)] shadow-sm shadow-lg focus:outline-none"
    role="alert"
    tabindex="0"
  >
    <div
      class="h-1.5 w-full bg-rose-500"
    />
    <div
      class="flex items-start gap-3 p-4"
    >
      <div
        class="rounded-full px-2.5 py-1 text-xs font-semibold uppercase tracking-[0.18em] bg-[var(--status-error-bg)] text-[var(--status-error-foreground)]"
      >
        Error
      </div>
      <div
        class="min-w-0 flex-1"
      >
        <p
          class="text-sm font-semibold"
        >
          Error C
        </p>
        <p
          class="mt-1 text-sm text-[var(--muted-foreground)]"
        >
          First error
        </p>
      </div>
      <button
        aria-label="Dismiss error notification"
        class="rounded-full p-1.5 text-[var(--muted-foreground)] transition hover:bg-[var(--accent)] hover:text-[var(--foreground)] focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)] focus-visible:ring-offset-1"
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`toast rendered output — structural + snapshot tests loaded state — multiple toasts matches the structural snapshot for multiple toasts stacked 2`] = `
<button
  type="button"
>
  Add 3
</button>
`;

exports[`toast rendered output — structural + snapshot tests loaded state — multiple toasts renders exactly MAX_VISIBLE_TOASTS=4 and oldest evicted when cap exceeded — structural 1`] = `
<div
  aria-atomic="false"
  aria-label="Notifications"
  class="pointer-events-none fixed right-4 top-4 z-50 flex w-[min(24rem,calc(100vw-2rem))] flex-col gap-3"
  role="region"
>
  <div
    class="pointer-events-auto overflow-hidden rounded-2xl border border-[var(--border)] bg-[var(--surface)] text-[var(--foreground)] shadow-sm shadow-lg focus:outline-none"
    role="status"
    tabindex="0"
  >
    <div
      class="h-1.5 w-full bg-emerald-500"
    />
    <div
      class="flex items-start gap-3 p-4"
    >
      <div
        class="rounded-full px-2.5 py-1 text-xs font-semibold uppercase tracking-[0.18em] bg-[var(--status-success-bg)] text-[var(--status-success-foreground)]"
      >
        Success
      </div>
      <div
        class="min-w-0 flex-1"
      >
        <p
          class="text-sm font-semibold"
        >
          T2
        </p>
        <p
          class="mt-1 text-sm text-[var(--muted-foreground)]"
        >
          Toast 2
        </p>
      </div>
      <button
        aria-label="Dismiss success notification"
        class="rounded-full p-1.5 text-[var(--muted-foreground)] transition hover:bg-[var(--accent)] hover:text-[var(--foreground)] focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)] focus-visible:ring-offset-1"
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
      </button>
    </div>
  </div>
  <div
    class="pointer-events-auto overflow-hidden rounded-2xl border border-[var(--border)] bg-[var(--surface)] text-[var(--foreground)] shadow-sm shadow-lg focus:outline-none"
    role="status"
    tabindex="0"
  >
    <div
      class="h-1.5 w-full bg-emerald-500"
    />
    <div
      class="flex items-start gap-3 p-4"
    >
      <div
        class="rounded-full px-2.5 py-1 text-xs font-semibold uppercase tracking-[0.18em] bg-[var(--status-success-bg)] text-[var(--status-success-foreground)]"
      >
        Success
      </div>
      <div
        class="min-w-0 flex-1"
      >
        <p
          class="text-sm font-semibold"
        >
          T3
        </p>
        <p
          class="mt-1 text-sm text-[var(--muted-foreground)]"
        >
          Toast 3
        </p>
      </div>
      <button
        aria-label="Dismiss success notification"
        class="rounded-full p-1.5 text-[var(--muted-foreground)] transition hover:bg-[var(--accent)] hover:text-[var(--foreground)] focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)] focus-visible:ring-offset-1"
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
      </button>
    </div>
  </div>
  <div
    class="pointer-events-auto overflow-hidden rounded-2xl border border-[var(--border)] bg-[var(--surface)] text-[var(--foreground)] shadow-sm shadow-lg focus:outline-none"
    role="status"
    tabindex="0"
  >
    <div
      class="h-1.5 w-full bg-emerald-500"
    />
    <div
      class="flex items-start gap-3 p-4"
    >
      <div
        class="rounded-full px-2.5 py-1 text-xs font-semibold uppercase tracking-[0.18em] bg-[var(--status-success-bg)] text-[var(--status-success-foreground)]"
      >
        Success
      </div>
      <div
        class="min-w-0 flex-1"
      >
        <p
          class="text-sm font-semibold"
        >
          T4
        </p>
        <p
          class="mt-1 text-sm text-[var(--muted-foreground)]"
        >
          Toast 4
        </p>
      </div>
      <button
        aria-label="Dismiss success notification"
        class="rounded-full p-1.5 text-[var(--muted-foreground)] transition hover:bg-[var(--accent)] hover:text-[var(--foreground)] focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)] focus-visible:ring-offset-1"
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
      </button>
    </div>
  </div>
  <div
    class="pointer-events-auto overflow-hidden rounded-2xl border border-[var(--border)] bg-[var(--surface)] text-[var(--foreground)] shadow-sm shadow-lg focus:outline-none"
    role="status"
    tabindex="0"
  >
    <div
      class="h-1.5 w-full bg-emerald-500"
    />
    <div
      class="flex items-start gap-3 p-4"
    >
      <div
        class="rounded-full px-2.5 py-1 text-xs font-semibold uppercase tracking-[0.18em] bg-[var(--status-success-bg)] text-[var(--status-success-foreground)]"
      >
        Success
      </div>
      <div
        class="min-w-0 flex-1"
      >
        <p
          class="text-sm font-semibold"
        >
          T5
        </p>
        <p
          class="mt-1 text-sm text-[var(--muted-foreground)]"
        >
          Toast 5
        </p>
      </div>
      <button
        aria-label="Dismiss success notification"
        class="rounded-full p-1.5 text-[var(--muted-foreground)] transition hover:bg-[var(--accent)] hover:text-[var(--foreground)] focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)] focus-visible:ring-offset-1"
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`toast rendered output — structural + snapshot tests loaded state — multiple toasts renders exactly MAX_VISIBLE_TOASTS=4 and oldest evicted when cap exceeded — structural 2`] = `
<button
  type="button"
>
  Add 5
</button>
`;

exports[`toast rendered output — structural + snapshot tests loaded state — single error toast (error variant) matches the structural snapshot for one loaded error toast 1`] = `
<div
  aria-atomic="false"
  aria-label="Notifications"
  class="pointer-events-none fixed right-4 top-4 z-50 flex w-[min(24rem,calc(100vw-2rem))] flex-col gap-3"
  role="region"
>
  <div
    class="pointer-events-auto overflow-hidden rounded-2xl border border-[var(--border)] bg-[var(--surface)] text-[var(--foreground)] shadow-sm shadow-lg focus:outline-none"
    role="alert"
    tabindex="0"
  >
    <div
      class="h-1.5 w-full bg-rose-500"
    />
    <div
      class="flex items-start gap-3 p-4"
    >
      <div
        class="rounded-full px-2.5 py-1 text-xs font-semibold uppercase tracking-[0.18em] bg-[var(--status-error-bg)] text-[var(--status-error-foreground)]"
      >
        Error
      </div>
      <div
        class="min-w-0 flex-1"
      >
        <p
          class="text-sm font-semibold"
        >
          Wallet not connected
        </p>
        <p
          class="mt-1 text-sm text-[var(--muted-foreground)]"
        >
          Connect a wallet before approving this release.
        </p>
      </div>
      <button
        aria-label="Dismiss error notification"
        class="rounded-full p-1.5 text-[var(--muted-foreground)] transition hover:bg-[var(--accent)] hover:text-[var(--foreground)] focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)] focus-visible:ring-offset-1"
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`toast rendered output — structural + snapshot tests loaded state — single error toast (error variant) matches the structural snapshot for one loaded error toast 2`] = `
<button
  type="button"
>
  Trigger
</button>
`;

exports[`toast rendered output — structural + snapshot tests loaded state — single success toast matches the structural snapshot for one loaded success toast 1`] = `
<div
  aria-atomic="false"
  aria-label="Notifications"
  class="pointer-events-none fixed right-4 top-4 z-50 flex w-[min(24rem,calc(100vw-2rem))] flex-col gap-3"
  role="region"
>
  <div
    class="pointer-events-auto overflow-hidden rounded-2xl border border-[var(--border)] bg-[var(--surface)] text-[var(--foreground)] shadow-sm shadow-lg focus:outline-none"
    role="status"
    tabindex="0"
  >
    <div
      class="h-1.5 w-full bg-emerald-500"
    />
    <div
      class="flex items-start gap-3 p-4"
    >
      <div
        class="rounded-full px-2.5 py-1 text-xs font-semibold uppercase tracking-[0.18em] bg-[var(--status-success-bg)] text-[var(--status-success-foreground)]"
      >
        Success
      </div>
      <div
        class="min-w-0 flex-1"
      >
        <p
          class="text-sm font-semibold"
        >
          Milestone released
        </p>
        <p
          class="mt-1 text-sm text-[var(--muted-foreground)]"
        >
          Funds are on the way to the freelancer wallet.
        </p>
      </div>
      <button
        aria-label="Dismiss success notification"
        class="rounded-full p-1.5 text-[var(--muted-foreground)] transition hover:bg-[var(--accent)] hover:text-[var(--foreground)] focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)] focus-visible:ring-offset-1"
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`toast rendered output — structural + snapshot tests loaded state — single success toast matches the structural snapshot for one loaded success toast 2`] = `
<button
  type="button"
>
  Trigger
</button>
`;

exports[`toast rendered output — structural + snapshot tests loaded state — success toast with action button matches the structural snapshot for a success toast with action button 1`] = `
<div
  aria-atomic="false"
  aria-label="Notifications"
  class="pointer-events-none fixed right-4 top-4 z-50 flex w-[min(24rem,calc(100vw-2rem))] flex-col gap-3"
  role="region"
>
  <div
    class="pointer-events-auto overflow-hidden rounded-2xl border border-[var(--border)] bg-[var(--surface)] text-[var(--foreground)] shadow-sm shadow-lg focus:outline-none"
    role="status"
    tabindex="0"
  >
    <div
      class="h-1.5 w-full bg-emerald-500"
    />
    <div
      class="flex items-start gap-3 p-4"
    >
      <div
        class="rounded-full px-2.5 py-1 text-xs font-semibold uppercase tracking-[0.18em] bg-[var(--status-success-bg)] text-[var(--status-success-foreground)]"
      >
        Success
      </div>
      <div
        class="min-w-0 flex-1"
      >
        <p
          class="text-sm font-semibold"
        >
          File saved
        </p>
        <p
          class="mt-1 text-sm text-[var(--muted-foreground)]"
        >
          Your changes have been written.
        </p>
        <button
          class="mt-2 rounded-md px-3 py-1 text-xs font-semibold transition focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)] focus-visible:ring-offset-1 bg-[var(--primary)] text-[var(--primary-foreground)] hover:opacity-90"
          type="button"
        >
          Undo
        </button>
      </div>
      <button
        aria-label="Dismiss success notification"
        class="rounded-full p-1.5 text-[var(--muted-foreground)] transition hover:bg-[var(--accent)] hover:text-[var(--foreground)] focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)] focus-visible:ring-offset-1"
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`toast rendered output — structural + snapshot tests loaded state — success toast with action button matches the structural snapshot for a success toast with action button 2`] = `
<button
  type="button"
>
  Trigger
</button>
`;

exports[`toast rendered output — structural + snapshot tests structural edge cases for coverage compact density viewport has gap-1.5 class structurally 1`] = `
<button
  type="button"
>
  Go
</button>
`;

exports[`toast rendered output — structural + snapshot tests structural edge cases for coverage dismiss button onKeyDown covers Enter and Space branches structurally 1`] = `
<button
  type="button"
>
  Go
</button>
`;
